# AADS_Vectors

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  Vector.qbs
app/: CMakeLists.txt  main.c
docs/html/: annotated.html  annotated_dup.js  classes.html  dir_000000_000001.html  dir_000001_000002.html  dir_000002_000001.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_b0856f6b0d80ccb263b2f415c91f9e17.html  dir_b0856f6b0d80ccb263b2f415c91f9e17.js  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d422163b96683743ed3963d4aac17747_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  graph_legend.html  group__io__utils.html  group__io__utils.js  group__mymalloc.html  group__mymalloc.js  group__vector.html  group__vector.js  index.html  ioutils_8c.html  ioutils_8c.js  ioutils_8c__incl.map  ioutils_8c__incl.md5  ioutils_8h.html  ioutils_8h.js  (+42 more)
include/: vector.h
src/: CMakeLists.txt  ioutils.c  ioutils.h  main.c  mymalloc.c  mymalloc.h  vector.c  vector.h
src/include/: ioutils.h  mymalloc.h  vector.h
test_files/: input1.txt  input2.txt  input3.txt  input4.txt  input6.txt  input7.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  output6.txt  output7.txt
tests/: CMakeLists.txt  minunit.h  tests.c  tests.cpp
(+27 files in other folders)
